--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
         "@tanstack/react-query": "^5.62.3",
         "autoprefixer": "^10.4.20",
         "framer-motion": "^11.13.1",
+        "lucide-react": "^0.468.0",
         "postcss": "^8.4.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.4.0",
         "react-router-dom": "^7.0.2",
+        "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.16"
     },
     "devDependencies": {
