--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,32 @@
     },
     "dependencies": {
         "@coinbase/onchainkit": "^0.33.6",
+        "@hookform/resolvers": "^3.9.1",
+        "@radix-ui/react-popover": "^1.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
         "@rainbow-me/rainbowkit": "^2.2.1",
         "@tanstack/react-query": "^5.62.3",
+        "@types/node": "^22.10.1",
         "autoprefixer": "^10.4.20",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "framer-motion": "^11.13.1",
         "lucide-react": "^0.468.0",
         "postcss": "^8.4.49",
         "react": "^18.3.1",
+        "react-day-picker": "^9.4.2",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.0",
         "react-icons": "^5.4.0",
         "react-router-dom": "^7.0.2",
+        "react-time-picker": "^7.0.0",
+        "shadcn-ui": "^0.9.3",
+        "tailwind-merge": "^2.5.5",
         "tailwind-scrollbar": "^3.1.0",
-        "tailwindcss": "^3.4.16"
+        "tailwindcss": "^3.4.16",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
