--- a/contract/foundry.toml
+++ b/contract/foundry.toml
@@ -3,7 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = [
-    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/"
+    "@openzeppelin/contracts/=lib/openzeppelin-contracts/contracts/",
+    "@forge-std/=lib/forge-std/src/",
+    "forge-std/=lib/forge-std/src/"
 ]
 
 [rpc_endpoints]
