--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
+        "ethers": "^6.13.4",
         "framer-motion": "^11.13.1",
         "lucide-react": "^0.468.0",
         "postcss": "^8.4.49",
